[package]
name = "zon-lb-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
zon-lb-common = { path = "../zon-lb-common" }
network-types = "^0.0.5"
ebpf_rshelpers = { path = "../../ebpf_rshelpers" }

[[bin]]
name = "zon-lb"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
