[package]
name = "zon-lb"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-obj = { git = "https://github.com/aya-rs/aya" }
clap = { version = "^4", features = ["derive"] }
zon-lb-common = { path = "../zon-lb-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
chrono = { version = "0.4.31", features = ["clock"] }

[[bin]]
name = "zon-lb"
path = "src/main.rs"
